--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -354,89 +354,6 @@ ul.dso-edit-menu-dropdown>li .nav-item.nav-link {
     padding-bottom: 0.125rem !important;
 }
 
-.btn {
-    &:focus {
-        outline-offset: 2px !important;
-        outline-style: solid !important;
-        outline-width: 2px !important;
-        box-shadow: none !important;
-    }
-    &:disabled {
-        opacity: 0.7;
-    }
-    &.btn-success {
-        background-color: darken($success, 20%);
-        border-color: darken($success, 20%);
-        &:hover {
-            background-color: darken($success, 30%);
-            border-color: darken($success, 30%);
-        }
-        &:focus {
-            outline-color: darken($success, 20%);
-        }
-    }
-    &.btn-outline-success {
-        border-color: darken($success, 20%);
-        color: darken($success, 20%);
-
-        &:hover {
-            background-color: darken($success, 30%);
-            color: $white;
-        }
-        &:focus {
-            outline-color: darken($success, 20%);
-        }
-    }
-    &.btn-warning {
-        background-color: darken($warning, 20%);
-        &:hover {
-            background-color: darken($warning, 30%);
-        }
-        &:disabled {
-            background-color: transparent;
-        }
-        &:focus {
-            outline-color: darken($warning, 22%);
-        }
-    }
-
-    &.btn-outline-warning {
-        border-color: darken($warning, 20%);
-        color: darken($warning, 20%);
-        &:hover {
-            background-color: darken($warning, 30%);
-            color: $white;
-        }
-        &:disabled {
-            background-color: transparent;
-
-            &:hover {
-                color: darken($warning, 20%);
-            }
-        }
-        :focus {
-            outline-color: darken($warning, 22%);
-        }
-        &:not(:disabled):hover {
-            background-color: darken($warning, 22%);
-        }
-    }
-
-    &.btn-secondary {
-        &:focus {
-            outline-color: darken($secondary, 20%);
-        }
-    }
-
-    &.btn-danger:focus, &.btn-outline-danger:focus {
-        outline-color: darken($danger, 20%);
-    }
-
-    &.btn-primary:focus, &.btn-outline-primary:focus {
-        outline-color: darken($primary, 5%);
-    }
-}
-
 dynamic-ng-bootstrap-checkbox .custom-control-input:focus ~ .custom-control-label::before {
     outline: 2px solid $gray-700 !important;
     box-shadow: none !important;
